# lowerbound

./: .dockerignore  .env.example  .gitignore  ASSETS.md  BUGFIXES.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  start.sh  test.sh  test_fetch.sh
agent/: test.py
agent/src/: __init__.py  backend_client.py  config.py  models.py  server.py
backend/: .env.example  AGGREGATED_STATS_API_PROPOSAL.md  BE.md  RISK_PROFILE_IMPLEMENTATION.md  pyproject.toml  test_aggregated_stats.sh  test_graph_request.json  test_performance_graph.py  test_risk_analysis.sh
backend/src/: api.py  config.py  database.py  models.py  scheduler.py  server.py
backend/src/analysis/: README.md  __init__.py  aggregated_stats.py  data_service.py  metrics.py  riskprofile.py  scenarios.py  valuation.py
backend/src/fetch/: __init__.py  dune_client.py  futures.py  lending.py  lending_backfill.py
front/: .env.example  package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/components/: chart-line.tsx  chart-pie.tsx  chat-bubble.tsx  chat-config-popup.tsx  chat-config-status.tsx  chat-status-banner.tsx  chat.tsx  new-chat-modal.tsx  portfolio-config-inputs.tsx  sidebar.tsx  thinking-indicator.tsx  tool-call-modal.tsx
front/hooks/: use-chat-detail.ts  use-chat-list.ts  use-create-chat.ts
front/lib/: api-client.ts  chat-reducer.ts  financial-terms.ts  mock-data.ts  stream-handler.ts  types.ts  utils.ts
front/types/: index.ts
src/: __init__.py  api.py  config.py  database.py  models.py  scheduler.py
src/fetch/: aave_client.py  backfill.py  (+5 more)
(+55 files in other folders)
